--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,7 @@ project(twocams)
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
+add_library(detection detection.cpp)
+
 add_executable(twocams twocams.cpp)
-target_link_libraries(twocams ${OpenCV_LIBS})
+target_link_libraries(twocams ${OpenCV_LIBS} detection)
