Added deviation test funtion and renamed detection.h, .cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(twocams)
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_library(detection detection.cpp)
+add_library(ballDetector ballDetector.cpp)
 
 add_executable(twocams twocams.cpp)
-target_link_libraries(twocams ${OpenCV_LIBS} detection)
+target_link_libraries(twocams ${OpenCV_LIBS} ballDetector)
